<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_display1_string"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:text="@string/txt_display2_string"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/display1"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/contador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txt_contador1_int"
        android:textSize="60sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display1"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/contador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="44dp"
        android:text="@string/txt_contador2_int"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="60sp"
        app:layout_constraintStart_toEndOf="@+id/contador1"
        app:layout_constraintTop_toBottomOf="@+id/display2" />

    <Button
        android:id="@+id/sumaa3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/btnsma3"
        android:background="@color/colorPrimary"
        android:onClick="threepointTeamA"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contador1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sumaa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btnsma2"
        android:onClick="twopointTeamA"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sumaa3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sumaa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnsma1"
        android:onClick="onepointTeamA"
        android:textSize="12sp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sumaa2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sumab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="76dp"
        android:text="@string/btnsmb3"
        android:onClick="threepointTeamB"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/sumaa3"
        app:layout_constraintTop_toBottomOf="@+id/contador2" />

    <Button
        android:id="@+id/sumab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnsmb2"
        android:onClick="twopointTeamB"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/sumaa2"
        app:layout_constraintTop_toBottomOf="@+id/sumab3" />

    <Button
        android:id="@+id/sumab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="32dp"
        android:text="@string/btnsmb1"
        android:onClick="onepointTeamB"
        android:textSize="12sp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/sumaa1"
        app:layout_constraintTop_toBottomOf="@+id/sumab2" />

    <Button
        android:id="@+id/reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="reset"
        android:text="@string/btnreiniciar"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/button"
        android:layout_width="3dp"
        android:layout_height="416dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.544" />

</androidx.constraintlayout.widget.ConstraintLayout>